syntax = "proto3";

package worldmonitor.core.v1;

import "google/protobuf/timestamp.proto";

// TimeRange represents a time interval defined by a start and end timestamp.
// Used for filtering data within a specific time period.
message TimeRange {
  // Start of the time range (inclusive).
  google.protobuf.Timestamp start = 1;
  // End of the time range (inclusive).
  google.protobuf.Timestamp end = 2;
}
